--- a/index.html
+++ b/index.html
@@ -26,5 +26,44 @@
             <div class="hero-image">this is a placeholder for an image</div>
         </div>
     </div>
+    <div class="sect-2">
+        <div class="sect-2-title">Some random information.</div>
+        <div class="sect-2-cards">
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <div class="card-image"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="sect-3">
+        <div class="quote">
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
+    </div>
+    <div class="sect-4">
+        <div class="call-to-action">
+            <div class="call-to-action-text-container">
+                <div class="call-to-action-text">Call to action! It's time!</div>
+                <div class="call-to-action-sub">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
